centre the carousel

--- a/src/pages/NoPage.css
+++ b/src/pages/NoPage.css
@@ -6,6 +6,7 @@
  background-image: url("/public/images/360_F_159179817_F8joMJLDzGCjFSENf7ectW43ZJ7mlXvr.jpg");
     height: 400px;
     background-position: center;
+    background-repeat: no-repeat;
  }
  
  
